--- a/resources/style.css
+++ b/resources/style.css
@@ -3,15 +3,17 @@ body {
   font-size: 18px;
   font-family: Helvetica;
   color: white;
-  padding-left: 100px;
-  padding-right: 100px;
+  width: 960px;
+  /*padding-left: 100px;
+  padding-right: 100px;*/
 }
 
 /* Header */
 header {
   background-color: black;
   display: flex;
-  width: 960px;
+  width: 100%
+  /*width: 960px;*/
 }
 
 .logo img {
@@ -27,3 +29,118 @@ header {
 }
 
 /* Bikes Section */
+
+.bikes {
+  height: 25rem;
+  width: 100%;
+  display: flex;
+}
+
+.bikes-txt {
+  text-align: left;
+  background-color: black;
+  padding-top: 9rem;
+}
+
+.line1 {
+  padding-left: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 0.25rem;
+  margin: 0;
+  font-weight: bold;
+}
+
+.line2 {
+  padding-left: 3rem;
+  padding-bottom: 2rem;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+/* Navigation */
+
+.nav {
+  background-color: firebrick;
+  display: flex;
+}
+
+a {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  color: white;
+  text-decoration: none;
+  padding-left: 100px;
+}
+
+/* Products Section */
+
+.products-container {
+  padding-bottom: 3rem;
+}
+
+.products-child {
+  display: inline-block;
+  flex-wrap: nowrap;
+  padding-top: 3rem;
+  border: 4px solid black;
+  justify-content: center;
+  width: 30%;
+}
+
+.products-child img {
+  height: 9rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  align-items: center;
+}
+
+.products-child span {
+  background-color: black;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+/* Location and Hours Section */
+
+.info {
+  display: flex;
+  padding-bottom: 4rem;
+}
+
+.location {
+  width: 35%;
+}
+
+.location1 {
+  background-color: black;
+  padding-left: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.location2 {
+  color: black;
+}
+
+.hours {
+  width: 35%;
+}
+
+.hours1 {
+  background-color: black;
+  padding-left: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.hours2 {
+  color: black;
+}
+
+/* Footer */
+
+footer {
+  background-color: black;
+  height: 5rem;
+  text-align: left;
+}
