--- a/resources/style.css
+++ b/resources/style.css
@@ -8,6 +8,10 @@ body {
   padding-right: 100px;*/
 }
 
+.container {
+  width: 960px;
+}
+
 /* Header */
 header {
   background-color: black;
@@ -31,6 +35,7 @@ header {
 /* Bikes Section */
 
 .bikes {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg");
   height: 25rem;
   width: 100%;
   display: flex;
@@ -74,7 +79,7 @@ a {
 
 /* Products Section */
 
-.products-container {
+.products-parent {
   padding-bottom: 3rem;
 }
 
@@ -102,39 +107,19 @@ a {
 
 /* Location and Hours Section */
 
-.info {
+.business-info {
   display: flex;
   padding-bottom: 4rem;
 }
 
-.location {
+.info {
   width: 35%;
 }
 
-.location1 {
+.title {
   background-color: black;
-  padding-left: 2rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.location2 {
-  color: black;
-}
-
-.hours {
-  width: 35%;
-}
-
-.hours1 {
-  background-color: black;
-  padding-left: 2rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.hours2 {
-  color: black;
+  padding: 1rem 0rem 1rem 2rem;
+  color: white;
 }
 
 /* Footer */
