--- a/resources/style.css
+++ b/resources/style.css
@@ -1,131 +1,200 @@
 /* Universal Styles */
+html {
+  box-sizing: border-box;
+}
+
 body {
   font-size: 18px;
   font-family: Helvetica;
-  color: white;
   width: 960px;
-  /*padding-left: 100px;
-  padding-right: 100px;*/
 }
 
 .container {
   width: 960px;
+  margin: 0 auto;
 }
 
 /* Header */
 header {
   background-color: black;
+  color: white;
+}
+
+header .container {
   display: flex;
-  width: 100%
-  /*width: 960px;*/
+  align-items: center;
+  padding: .66rem 0 .66rem .5rem;
 }
 
-.logo img {
-  height: 1.5rem;
-  padding-left: 0.5rem;
+header img {
   padding-right: 1rem;
-}
-
-.logo span {
-  font-size: 1rem;
-  padding-top: 0.66rem;
-  padding-bottom: 0.66rem;
+  height: 1.5rem;
 }
 
 /* Bikes Section */
 
 .bikes {
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   height: 25rem;
-  width: 100%;
-  display: flex;
 }
 
 .bikes-txt {
-  text-align: left;
+  position: relative;
+  top: 9rem;
+  width: 20rem;
+  padding: 2rem 3rem;
   background-color: black;
-  padding-top: 9rem;
+  color: white;
 }
 
-.line1 {
-  padding-left: 3rem;
-  padding-top: 2rem;
-  padding-bottom: 0.25rem;
-  margin: 0;
-  font-weight: bold;
-}
-
-.line2 {
-  padding-left: 3rem;
-  padding-bottom: 2rem;
-  font-weight: bold;
+.bikes-txt h1 {
+  margin: 0.25rem 0;
   font-size: 2rem;
+  line-height: 1.2;
+}
+
+@media only screen and (max-width: 470px) {
+  .bikes-txt {
+    width: 100%;
+    padding: 1rem 2rem;
+    top: 10rem;
+  }
+
+  .bikes {
+    height: 15rem;
+  }
+
+  .bikes-txt h1 {
+    font-size: 1rem;
+  }
+
+  .bikes-txt h4 {
+    font-size: .77rem;
+  }
 }
 
 /* Navigation */
 
-.nav {
+nav {
   background-color: firebrick;
-  display: flex;
+  color: white;
 }
 
-a {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  color: white;
-  text-decoration: none;
-  padding-left: 100px;
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: .75rem 0;
 }
+
+.mobile-nav{
+  display: none;
+}
+
+@media only screen and (max-width: 1024px){
+  nav ul {
+    display: none;
+  }
+  .mobile-nav {
+    display: block;
+    text-align: center;
+  }
+}
+
 
 /* Products Section */
-
-.products-parent {
-  padding-bottom: 3rem;
+  /* Similarities between products and business info */
+.products,
+.business-info {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
 }
 
-.products-child {
-  display: inline-block;
-  flex-wrap: nowrap;
-  padding-top: 3rem;
-  border: 4px solid black;
-  justify-content: center;
+  /* Just Products */
+.product {
   width: 30%;
 }
 
-.products-child img {
-  height: 9rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  align-items: center;
-}
-
-.products-child span {
-  background-color: black;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-/* Location and Hours Section */
-
-.business-info {
+.product-img {
   display: flex;
-  padding-bottom: 4rem;
+  justify-content: center;
+  align-items: center;
+  height: 9rem;
+  padding: 2rem 0;
+  border: 4px solid black;
 }
+
+.product-img img {
+  max-width: 8rem;
+}
+
+.description {
+  display: block;
+  padding: 0.5rem;
+  background-color: black;
+  text-align: center;
+  color: white;
+}
+
+  /* Location and Hours Section w/in Products Section */
 
 .info {
   width: 35%;
 }
 
-.title {
+.info .title {
+  display: block;
+  padding: 1rem 2rem;
   background-color: black;
-  padding: 1rem 0rem 1rem 2rem;
   color: white;
+}
+
+@media only screen and (max-width: 1024px) {
+  .product {
+    width: 47%;
+  }
+
+  .product.glasses {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .products,
+  .business-info {
+    flex-wrap: wrap;
+  }
+
+  .product.watch {
+    display: none;
+  }
+
+  .product {
+    width: 90%;
+    margin: auto;
+  }
+
+  .info {
+    width: 90%;
+    margin: .5rem auto;
+  }
 }
 
 /* Footer */
 
 footer {
   background-color: black;
-  height: 5rem;
-  text-align: left;
+  color: white;
+  padding: 5rem 0;
+  margin-top: 4rem;
+}
+
+@media only screen and (max-width: 470px) {
+  footer {
+    text-align: center;
+  }
 }
